# halibut

./: .gitignore  .gitmodules  Buildscr  Buildscr.test  CMakeLists.txt  INSTALL  LICENCE  Makefile  Makefile.am  biblio.c  bk_html.c  bk_info.c  bk_man.c  bk_paper.c  bk_pdf.c  bk_ps.c  bk_text.c  bk_whlp.c  configure.ac  confuse.c  contents.c  convcs.c  cp949.c  csshow.c  cstable.c  deflate.c  error.c  euc.c  gb2312.c  halibut.h  help.c  huffman.c  huffman.h  hz.c  in_afm.c  in_pf.c  in_sfnt.c  index.c  input.c  iso2022.c  (+32 more)
charset/: big5enc.c  big5set.c  charset.h  cns11643.c  configure.ac  confuse.c  convcs.c  csshow.c  cstable.c  enum.h  fromucs.c  htmlcs.c  internal.h  iso2022.c  jisx0212.c  localenc.c  slookup.c  utf8.c
doc/: CMakeLists.txt  Makefile  blurb.but  chm.but  index.but  input.but  intro.but  licence.but  manpage.but  output.but  running.but
inputs/: test.but
misc/: halibut.spec  halibut.vim  logalloc
